cmake_minimum_required(VERSION 3.10)

message("build type ${CMAKE_BUILD_TYPE}")
project(billing VERSION 1.0.0 LANGUAGES CXX)
# 是否编译32位
option(BILLING_BUILD_M32 "Build 32bit billing" OFF)
# 是否动态链接
option(BILLING_BUILD_SHARED "Build shared link billing" OFF)
if (BILLING_BUILD_M32)
  message("build 32bit")
  set(CMAKE_CXX_FLAGS "-m32 ${CMAKE_CXX_FLAGS}")
  set(CMAKE_C_FLAGS "-m32 ${CMAKE_C_FLAGS}")
endif()
if (BILLING_BUILD_SHARED)
  message("build shared")
  set(BUILD_SHARED_LIBS ON)
else()
  message("build static")
  set(CMAKE_CXX_FLAGS "-static ${CMAKE_CXX_FLAGS}")
  set(CMAKE_C_FLAGS "-static ${CMAKE_C_FLAGS}")
endif()

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
add_subdirectory(deps/yaml-cpp)
add_subdirectory(server)
add_executable(${PROJECT_NAME} main.cpp)
set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "-Wl,-rpath,./lib")
target_link_libraries(${PROJECT_NAME} server)
file(COPY config.yaml DESTINATION ${PROJECT_BINARY_DIR})
